--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
  Webian Shell browser content
  http://webian.org
  
- Copyright @authors 2011
+ Copyright @authors 2012
 
  @author Ben Francis http://tola.me.uk
  
-
  Webian Shell is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
@@ -35,25 +34,19 @@
 
   <body role="application">
     <!-- Home Screen -->
-    <div id="home_screen" class="active">
-
-      <menu type="toolbar" id="top_toolbar">
-        <button id="power_button" alt="Shut down">
+    <div id="home_screen">
+      <menu type="toolbar" id="power_toolbar">
+        <button id="power_button">
       </menu>
-
-      <div id="widget_space">
-
-      </div>
-
+      <div id="icon_grid"></div>
     </div>
-    <!-- End of Home Screen -->
 
     <!-- Window Toolbar -->
     <menu type="toolbar" id="window_toolbar">
       <button id="back_button">
       <button id="forward_button"></button>
       <div id="address_bar">
-        <span class="document_title"></span>
+        <span id="page_title" class="active">Title</span>
         <form id="url_form">
           <input type="text" id="url_input">
         </form>
@@ -61,28 +54,26 @@
       </div>
       <button id="close_button">
     </menu>
-    <!-- End of Window Toolbar -->
 
-    <!-- Windows -->
-    <div id="windows">
-      <iframe class="window" src="http://webian.org/shell/welcome/0.1/">
-        <!-- Insert iframe here -->
-      </iframe>
+    <!-- Frames -->
+    <div id="frames">
+      <!--<iframe class="window" src="http://webian.org/shell/welcome/0.1/">
+      </iframe>-->
+      <!-- Insert iframes here -->
     </div>
-    <!-- End of Windows -->
 
-    <!-- Bottom Toolbar -->
+    <!-- System Toolbar -->
     <menu type="toolbar" id="system_toolbar">
       <button id="home_button"></button
       <div id="tabs_container">
         <ul id="tabs">
           <!--<li class="selected tab"><img src="images/no_favicon.ico" /></li>-->
+          <!-- Insert tabs here -->
+          <button id="new_window_button"></button>
         </ul>
-        <button id="new_window_button"></button>
       </div>
       <div id="clock"></div>
     </div>
-    <!-- End of Bottom Toolbar -->
 
   </body>
 
