Switch Window - closes #128

--- a/index.html
+++ b/index.html
@@ -31,12 +31,16 @@
     <script type="text/javascript" src="js/SystemToolbar.js"></script>
     <script type="text/javascript" src="js/WindowManager.js"></script>
     <script type="text/javascript" src="js/AppWindow.js"></script>
+    <script type="text/javascript" src="js/AppWindowButton.js"></script>
   </head>
 
   <body role="application">
     <div id="windows"></div>
     <menu type="toolbar" id="system-toolbar">
-      <button type="button" id="new-window-button"></button>
+      <menu type="toolbar" id="window-controls">
+        <menu type="toolbar" id="window-switcher"></menu>
+        <button type="button" id="new-window-button"></button>
+      </menu>
       <span id="clock"></span>
     </menu>
   </body>
